public/css/styles.css
/* ... */
/* .collapsible-body .deviceprop,
.collapsible-body p {
  margin: 1px;
  margin-top: 3px;
  display: block;
} */

.collapsible-builds li {
  margin-top: 15px;
}

.buildChangelog pre {
  max-height: 230px;
  overflow-y: auto;
  background-color: var(--searchColor);
  padding: 8px;
  border-radius: 24px;
}

.buildChangelog {
  padding: 5px;
  padding-top: 0px;
}

.label {
  padding: 0px;
  text-align: center;
  font-weight: 600;
  /* text-transform: uppercase; */
  font-size: 16px;
}

.buildinfo {
  padding: 10px;
}

.buildbuttons {
  padding-top: 5px;
  padding-bottom: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.z-depth-1,
.collapsible,
.sidenav {
  box-shadow: none !important;
  border-right:0px;
}

.z-depth-1,
.sidenav,
.buildcoll {
  background-color: var(--background);
  box-shadow: 0 0.8px 4px rgba(0, 0, 0, 0.07), 0 0.8px 2px rgba(0, 0, 0, 0.15) !important;
}

.loadContainer {
  width: 100%;
  height: 190px;
  display: flex;
}

.spinner-accent-only {
  border-color: var(--accent);
}

.preloader-wrapper {
  margin: auto;
}

.btn {
  color: var(--background) !important;
  background-color: var(--accent) !important;
  border-radius: 24px;
  font-weight: bold;
  margin: 5px;
}

a.btn:hover {
  -webkit-transition: transform .2s;
  -webkit-transform: scale(1.05);
  transition: transform .2s;
  transform: scale(1.05);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

a.btn:not(:hover) {
  -webkit-transition: transform .2s;
  -webkit-transform: scale(1.00);
  transition: transform .2s;
  transform: scale(1.00);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

a.sources:hover {
  -webkit-transition: transform .2s;
  -webkit-transform: scale(1.10);
  transition: transform .2s;
  transform: scale(1.10);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

a.sources:not(:hover) {
  -webkit-transition: transform .2s;
  -webkit-transform: scale(1.00);
  transition: transform .2s;
  transform: scale(1.00);
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.zips {
  padding: 6px;
  border-radius: 24px;
  background-color: var(--card);
}

.zips.active {
  background-color: var(--container);
}

.zips.active span{
  color: var(--textHighlight)
}

.zips.active p{
  color: var(--textHighlight)
}

.zips.active i{
  color: var(--textHighlight) !important
}

.posts {
  padding: 6px;
  border-radius: 24px;
  background-color: var(--card);
}

.posts.active {
  background-color: var(--container);
}

.alert-box {
  height: 55px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 3px;
}

@-moz-document url-prefix() {
  .sidenav {
    height: 100% !important;
  }
}

@supports (-ms-ime-align: auto) {
  .sidenav {
    height: 100% !important;
  }
}

.changelog-button,
.changelog-button a {
  padding-bottom: 15px;
  width: 95%;
}

.logo-svg {
  width: 130px;
  height: 130px;
}

.logo-svg-big {
  width: 355px;
  height: 355px;
}

.bar-logo h4 {
  margin-top: 5px;
}

.banner-svg {
  width: 1400px;
  height: (100vh - (var(--increment) * 2))
}

.banner-svg-big {
  width: 1400px;
  height: (100vh - (var(--increment) * 2))
}

.center-banner {
  object-fit: cover;
  position: relative;
  display: flex;
  justify-content: center;
}

.color_animation {
  animation: animate 6s linear infinite;
}

@keyframes animate {
  0% {
    filter: hue-rotate(0deg);
  }

  100% {
    filter: hue-rotate(360deg);
  }
}

.text-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.fragment-root {
  max-width: var(--dimension-site-width);
  padding: 0 var(--dimension-site-padding);
  margin: 0 auto;
}

.link:hover {
  color: var(--accent) !important;
  -webkit-transition: transform .2s;
  -webkit-transform: scale(1.05);
  transition: transform .2s;
  transform: scale(1.05);
  cursor: pointer;
}

.sha256:hover {
  color: var(--textHighlight) !important;
  cursor: pointer;
}

@media (-webkit-min-device-pixel-ratio: 2),
(min-resolution: 192dpi) {
  .wow {
    width: fit-content !important;
  }
}

.menuIcon {
  background: var(--background);
  margin-right: -30px !important;
}

.textHighlight {
  color: var(--textHighlight);
}

.buttonInsideCard {
  background-color: var(--buttonBackground) !important;
  color: var(--buttonText)!important;
}

.description {
  color: var(--textHighlight) !important;
}

strong {
  font-weight: bold !important;
}

